--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<h1 class="text-3xl font-bold underline text-red-600">
-  Hello world!
-</h1>
-<h2 class="text-7xl" >
-beka oputo
-</h2>
-<h3 class="bg-green text-white py-4 px-6">
-  casita rural
-</h3>
+<div>
+  dale david
+</div>
